// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paintScene — whole-scene golden (ADR-0078 S1) > emits a stable ordered call log for the flag-off scene 1`] = `
[
  "setTransform([1,0,0,1,0,0])",
  "clearRect([0,0,800,760])",
  "strokeStyle=#111",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0.5,0])",
  "lineTo([0.5,760])",
  "moveTo([12.5,0])",
  "lineTo([12.5,760])",
  "moveTo([24.5,0])",
  "lineTo([24.5,760])",
  "moveTo([36.5,0])",
  "lineTo([36.5,760])",
  "moveTo([48.5,0])",
  "lineTo([48.5,760])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "moveTo([72.5,0])",
  "lineTo([72.5,760])",
  "moveTo([84.5,0])",
  "lineTo([84.5,760])",
  "moveTo([96.5,0])",
  "lineTo([96.5,760])",
  "moveTo([108.5,0])",
  "lineTo([108.5,760])",
  "moveTo([120.5,0])",
  "lineTo([120.5,760])",
  "moveTo([132.5,0])",
  "lineTo([132.5,760])",
  "moveTo([144.5,0])",
  "lineTo([144.5,760])",
  "moveTo([156.5,0])",
  "lineTo([156.5,760])",
  "moveTo([168.5,0])",
  "lineTo([168.5,760])",
  "moveTo([180.5,0])",
  "lineTo([180.5,760])",
  "moveTo([192.5,0])",
  "lineTo([192.5,760])",
  "moveTo([204.5,0])",
  "lineTo([204.5,760])",
  "moveTo([216.5,0])",
  "lineTo([216.5,760])",
  "moveTo([228.5,0])",
  "lineTo([228.5,760])",
  "moveTo([240.5,0])",
  "lineTo([240.5,760])",
  "moveTo([252.5,0])",
  "lineTo([252.5,760])",
  "moveTo([264.5,0])",
  "lineTo([264.5,760])",
  "moveTo([276.5,0])",
  "lineTo([276.5,760])",
  "moveTo([288.5,0])",
  "lineTo([288.5,760])",
  "moveTo([300.5,0])",
  "lineTo([300.5,760])",
  "moveTo([312.5,0])",
  "lineTo([312.5,760])",
  "moveTo([324.5,0])",
  "lineTo([324.5,760])",
  "moveTo([336.5,0])",
  "lineTo([336.5,760])",
  "moveTo([348.5,0])",
  "lineTo([348.5,760])",
  "moveTo([360.5,0])",
  "lineTo([360.5,760])",
  "moveTo([372.5,0])",
  "lineTo([372.5,760])",
  "moveTo([384.5,0])",
  "lineTo([384.5,760])",
  "moveTo([396.5,0])",
  "lineTo([396.5,760])",
  "moveTo([408.5,0])",
  "lineTo([408.5,760])",
  "moveTo([420.5,0])",
  "lineTo([420.5,760])",
  "moveTo([432.5,0])",
  "lineTo([432.5,760])",
  "moveTo([444.5,0])",
  "lineTo([444.5,760])",
  "moveTo([456.5,0])",
  "lineTo([456.5,760])",
  "moveTo([468.5,0])",
  "lineTo([468.5,760])",
  "moveTo([480.5,0])",
  "lineTo([480.5,760])",
  "moveTo([492.5,0])",
  "lineTo([492.5,760])",
  "moveTo([504.5,0])",
  "lineTo([504.5,760])",
  "moveTo([516.5,0])",
  "lineTo([516.5,760])",
  "moveTo([528.5,0])",
  "lineTo([528.5,760])",
  "moveTo([540.5,0])",
  "lineTo([540.5,760])",
  "moveTo([552.5,0])",
  "lineTo([552.5,760])",
  "moveTo([564.5,0])",
  "lineTo([564.5,760])",
  "moveTo([576.5,0])",
  "lineTo([576.5,760])",
  "moveTo([588.5,0])",
  "lineTo([588.5,760])",
  "moveTo([600.5,0])",
  "lineTo([600.5,760])",
  "moveTo([612.5,0])",
  "lineTo([612.5,760])",
  "moveTo([624.5,0])",
  "lineTo([624.5,760])",
  "moveTo([636.5,0])",
  "lineTo([636.5,760])",
  "moveTo([648.5,0])",
  "lineTo([648.5,760])",
  "moveTo([660.5,0])",
  "lineTo([660.5,760])",
  "moveTo([672.5,0])",
  "lineTo([672.5,760])",
  "moveTo([684.5,0])",
  "lineTo([684.5,760])",
  "moveTo([696.5,0])",
  "lineTo([696.5,760])",
  "moveTo([708.5,0])",
  "lineTo([708.5,760])",
  "moveTo([720.5,0])",
  "lineTo([720.5,760])",
  "moveTo([732.5,0])",
  "lineTo([732.5,760])",
  "moveTo([744.5,0])",
  "lineTo([744.5,760])",
  "moveTo([756.5,0])",
  "lineTo([756.5,760])",
  "moveTo([768.5,0])",
  "lineTo([768.5,760])",
  "moveTo([780.5,0])",
  "lineTo([780.5,760])",
  "moveTo([792.5,0])",
  "lineTo([792.5,760])",
  "moveTo([804.5,0])",
  "lineTo([804.5,760])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "moveTo([432.5,0])",
  "lineTo([432.5,760])",
  "moveTo([768.5,0])",
  "lineTo([768.5,760])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "stroke([])",
  "strokeStyle=#9c9c9c",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0,-19.5])",
  "lineTo([800,-19.5])",
  "moveTo([0,40.5])",
  "lineTo([800,40.5])",
  "moveTo([0,100.5])",
  "lineTo([800,100.5])",
  "moveTo([0,160.5])",
  "lineTo([800,160.5])",
  "moveTo([0,220.5])",
  "lineTo([800,220.5])",
  "moveTo([0,280.5])",
  "lineTo([800,280.5])",
  "moveTo([0,340.5])",
  "lineTo([800,340.5])",
  "moveTo([0,400.5])",
  "lineTo([800,400.5])",
  "moveTo([0,460.5])",
  "lineTo([800,460.5])",
  "moveTo([0,520.5])",
  "lineTo([800,520.5])",
  "moveTo([0,580.5])",
  "lineTo([800,580.5])",
  "moveTo([0,640.5])",
  "lineTo([800,640.5])",
  "moveTo([0,700.5])",
  "lineTo([800,700.5])",
  "moveTo([0,760.5])",
  "lineTo([800,760.5])",
  "stroke([])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([72,130])",
  "lineTo([60,130])",
  "lineTo([60,190])",
  "lineTo([72,190])",
  "moveTo([120,250])",
  "lineTo([132,250])",
  "lineTo([132,550])",
  "lineTo([113,550])",
  "stroke([])",
  "setLineDash([[]])",
  "lineWidth=2",
  "beginPath([])",
  "moveTo([120,70])",
  "lineTo([132,70])",
  "lineTo([132,130])",
  "lineTo([72,130])",
  "moveTo([120,190])",
  "lineTo([132,190])",
  "lineTo([132,250])",
  "lineTo([120,250])",
  "stroke([])",
  "lineWidth=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,67.5,48,5])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#f00",
  "fillRect([72,127.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1.5",
  "setLineDash([[]])",
  "strokeRect([72.75,128.25,46.5,3.5])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "fillRect([72,187.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1.5",
  "setLineDash([[3,2]])",
  "strokeRect([72.75,188.25,46.5,3.5])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,247.5,48,5])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,307.5,48,5])",
  "globalAlpha=1",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([68.5,302.5])",
  "lineTo([75.5,302.5])",
  "lineTo([72,307.5])",
  "fill([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,367.5,48,5])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "beginPath([])",
  "moveTo([73,375.5])",
  "lineTo([79,375.5])",
  "lineTo([76,368.5])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([73,375.5])",
  "lineTo([79,375.5])",
  "lineTo([76,368.5])",
  "lineTo([73,375.5])",
  "stroke([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,427.5,48,5])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "fillRect([95,421.5,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([95.5,422,4,4])",
  "fillStyle=#fa0",
  "fillRect([93,419.5,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([93.5,420,4,4])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,487.5,48,5])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "beginPath([])",
  "moveTo([120,543])",
  "lineTo([127,550])",
  "lineTo([120,557])",
  "lineTo([113,550])",
  "fill([])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,607.5,48,5])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,667.5,48,5])",
  "globalAlpha=1",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A100 Excavate",96,58.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A110 Piling",96,118.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A120 Steel",96,178.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A130 Cladding",96,238.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A140 Fit-out",96,298.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A150 M&E",96,358.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A160 Roof",96,418.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A170 Crane",96,478.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["M1 Handover",120,538.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["LOE Supervision",96,598.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["Substructure",96,658.5])",
  "textAlign=left",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,81.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,141.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,201.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,261.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,321.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,381.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,441.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,501.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["6 Jan",120,561.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,621.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,681.5])",
  "textAlign=left",
  "textAlign=left",
]
`;

exports[`paintScene — whole-scene golden (ADR-0078 S1) > emits a stable ordered call log for the maximal scene 1`] = `
[
  "setTransform([1,0,0,1,0,0])",
  "clearRect([0,0,800,760])",
  "fillStyle=#111111",
  "fillRect([0,0,60,760])",
  "fillRect([432,0,336,760])",
  "fillStyle=#222",
  "fillRect([12,0,12,760])",
  "fillRect([84,0,12,760])",
  "fillRect([96,0,12,760])",
  "fillRect([168,0,12,760])",
  "fillRect([180,0,12,760])",
  "fillRect([252,0,12,760])",
  "fillRect([264,0,12,760])",
  "fillRect([336,0,12,760])",
  "fillRect([348,0,12,760])",
  "fillRect([420,0,12,760])",
  "fillRect([432,0,12,760])",
  "fillRect([504,0,12,760])",
  "fillRect([516,0,12,760])",
  "fillRect([588,0,12,760])",
  "fillRect([600,0,12,760])",
  "fillRect([672,0,12,760])",
  "fillRect([684,0,12,760])",
  "fillRect([756,0,12,760])",
  "fillRect([768,0,12,760])",
  "strokeStyle=#3a3a3a",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0.5,0])",
  "lineTo([0.5,760])",
  "moveTo([12.5,0])",
  "lineTo([12.5,760])",
  "moveTo([24.5,0])",
  "lineTo([24.5,760])",
  "moveTo([36.5,0])",
  "lineTo([36.5,760])",
  "moveTo([48.5,0])",
  "lineTo([48.5,760])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "moveTo([72.5,0])",
  "lineTo([72.5,760])",
  "moveTo([84.5,0])",
  "lineTo([84.5,760])",
  "moveTo([96.5,0])",
  "lineTo([96.5,760])",
  "moveTo([108.5,0])",
  "lineTo([108.5,760])",
  "moveTo([120.5,0])",
  "lineTo([120.5,760])",
  "moveTo([132.5,0])",
  "lineTo([132.5,760])",
  "moveTo([144.5,0])",
  "lineTo([144.5,760])",
  "moveTo([156.5,0])",
  "lineTo([156.5,760])",
  "moveTo([168.5,0])",
  "lineTo([168.5,760])",
  "moveTo([180.5,0])",
  "lineTo([180.5,760])",
  "moveTo([192.5,0])",
  "lineTo([192.5,760])",
  "moveTo([204.5,0])",
  "lineTo([204.5,760])",
  "moveTo([216.5,0])",
  "lineTo([216.5,760])",
  "moveTo([228.5,0])",
  "lineTo([228.5,760])",
  "moveTo([240.5,0])",
  "lineTo([240.5,760])",
  "moveTo([252.5,0])",
  "lineTo([252.5,760])",
  "moveTo([264.5,0])",
  "lineTo([264.5,760])",
  "moveTo([276.5,0])",
  "lineTo([276.5,760])",
  "moveTo([288.5,0])",
  "lineTo([288.5,760])",
  "moveTo([300.5,0])",
  "lineTo([300.5,760])",
  "moveTo([312.5,0])",
  "lineTo([312.5,760])",
  "moveTo([324.5,0])",
  "lineTo([324.5,760])",
  "moveTo([336.5,0])",
  "lineTo([336.5,760])",
  "moveTo([348.5,0])",
  "lineTo([348.5,760])",
  "moveTo([360.5,0])",
  "lineTo([360.5,760])",
  "moveTo([372.5,0])",
  "lineTo([372.5,760])",
  "moveTo([384.5,0])",
  "lineTo([384.5,760])",
  "moveTo([396.5,0])",
  "lineTo([396.5,760])",
  "moveTo([408.5,0])",
  "lineTo([408.5,760])",
  "moveTo([420.5,0])",
  "lineTo([420.5,760])",
  "moveTo([432.5,0])",
  "lineTo([432.5,760])",
  "moveTo([444.5,0])",
  "lineTo([444.5,760])",
  "moveTo([456.5,0])",
  "lineTo([456.5,760])",
  "moveTo([468.5,0])",
  "lineTo([468.5,760])",
  "moveTo([480.5,0])",
  "lineTo([480.5,760])",
  "moveTo([492.5,0])",
  "lineTo([492.5,760])",
  "moveTo([504.5,0])",
  "lineTo([504.5,760])",
  "moveTo([516.5,0])",
  "lineTo([516.5,760])",
  "moveTo([528.5,0])",
  "lineTo([528.5,760])",
  "moveTo([540.5,0])",
  "lineTo([540.5,760])",
  "moveTo([552.5,0])",
  "lineTo([552.5,760])",
  "moveTo([564.5,0])",
  "lineTo([564.5,760])",
  "moveTo([576.5,0])",
  "lineTo([576.5,760])",
  "moveTo([588.5,0])",
  "lineTo([588.5,760])",
  "moveTo([600.5,0])",
  "lineTo([600.5,760])",
  "moveTo([612.5,0])",
  "lineTo([612.5,760])",
  "moveTo([624.5,0])",
  "lineTo([624.5,760])",
  "moveTo([636.5,0])",
  "lineTo([636.5,760])",
  "moveTo([648.5,0])",
  "lineTo([648.5,760])",
  "moveTo([660.5,0])",
  "lineTo([660.5,760])",
  "moveTo([672.5,0])",
  "lineTo([672.5,760])",
  "moveTo([684.5,0])",
  "lineTo([684.5,760])",
  "moveTo([696.5,0])",
  "lineTo([696.5,760])",
  "moveTo([708.5,0])",
  "lineTo([708.5,760])",
  "moveTo([720.5,0])",
  "lineTo([720.5,760])",
  "moveTo([732.5,0])",
  "lineTo([732.5,760])",
  "moveTo([744.5,0])",
  "lineTo([744.5,760])",
  "moveTo([756.5,0])",
  "lineTo([756.5,760])",
  "moveTo([768.5,0])",
  "lineTo([768.5,760])",
  "moveTo([780.5,0])",
  "lineTo([780.5,760])",
  "moveTo([792.5,0])",
  "lineTo([792.5,760])",
  "moveTo([804.5,0])",
  "lineTo([804.5,760])",
  "stroke([])",
  "strokeStyle=#111111",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "moveTo([432.5,0])",
  "lineTo([432.5,760])",
  "moveTo([768.5,0])",
  "lineTo([768.5,760])",
  "stroke([])",
  "strokeStyle=#565656",
  "lineWidth=2",
  "beginPath([])",
  "moveTo([60,0])",
  "lineTo([60,760])",
  "stroke([])",
  "strokeStyle=#9c9c9c",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0,-19.5])",
  "lineTo([800,-19.5])",
  "moveTo([0,40.5])",
  "lineTo([800,40.5])",
  "moveTo([0,100.5])",
  "lineTo([800,100.5])",
  "moveTo([0,160.5])",
  "lineTo([800,160.5])",
  "moveTo([0,220.5])",
  "lineTo([800,220.5])",
  "moveTo([0,280.5])",
  "lineTo([800,280.5])",
  "moveTo([0,340.5])",
  "lineTo([800,340.5])",
  "moveTo([0,400.5])",
  "lineTo([800,400.5])",
  "moveTo([0,460.5])",
  "lineTo([800,460.5])",
  "moveTo([0,520.5])",
  "lineTo([800,520.5])",
  "moveTo([0,580.5])",
  "lineTo([800,580.5])",
  "moveTo([0,640.5])",
  "lineTo([800,640.5])",
  "moveTo([0,700.5])",
  "lineTo([800,700.5])",
  "moveTo([0,760.5])",
  "lineTo([800,760.5])",
  "stroke([])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([120,250])",
  "lineTo([132,250])",
  "lineTo([132,550])",
  "lineTo([113,550])",
  "stroke([])",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([113,550])",
  "lineTo([121,547])",
  "lineTo([121,553])",
  "lineTo([113,550])",
  "fill([])",
  "setLineDash([[]])",
  "lineWidth=2",
  "beginPath([])",
  "stroke([])",
  "lineWidth=1",
  "strokeStyle=#0af",
  "lineWidth=2",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([120,130])",
  "lineTo([60,130])",
  "lineTo([60,190])",
  "lineTo([72,190])",
  "stroke([])",
  "fillStyle=#0af",
  "beginPath([])",
  "moveTo([72,190])",
  "lineTo([64,193])",
  "lineTo([64,187])",
  "lineTo([72,190])",
  "fill([])",
  "setLineDash([[]])",
  "lineWidth=3",
  "beginPath([])",
  "moveTo([120,70])",
  "lineTo([132,70])",
  "lineTo([132,130])",
  "lineTo([72,130])",
  "moveTo([120,190])",
  "lineTo([132,190])",
  "lineTo([132,250])",
  "lineTo([84,250])",
  "stroke([])",
  "fillStyle=#0af",
  "beginPath([])",
  "moveTo([72,130])",
  "lineTo([80,127])",
  "lineTo([80,133])",
  "lineTo([72,130])",
  "moveTo([84,250])",
  "lineTo([92,247])",
  "lineTo([92,253])",
  "lineTo([84,250])",
  "fill([])",
  "lineWidth=1",
  "strokeStyle=#333",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[2,2]])",
  "strokeRect([84.5,128,59,4])",
  "setLineDash([[]])",
  "globalAlpha=0.18",
  "fillStyle=#44f",
  "fillRect([72,67.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,65,10,10])",
  "strokeRect([115,65,10,10])",
  "globalAlpha=1",
  "fillStyle=#f00",
  "fillRect([72,127.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1",
  "fillRect([67,125,10,10])",
  "strokeRect([67,125,10,10])",
  "fillRect([115,125,10,10])",
  "strokeRect([115,125,10,10])",
  "globalAlpha=1",
  "fillStyle=#0c8",
  "fillRect([72,187.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=2",
  "strokeRect([67,185,10,10])",
  "strokeRect([115,185,10,10])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,247.5,48,5])",
  "fillStyle=#fff",
  "fillRect([72,247.5,21.6,5])",
  "fillRect([93.1,245.5,1,9])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,245,10,10])",
  "strokeRect([115,245,10,10])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,307.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,305,10,10])",
  "strokeRect([115,305,10,10])",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([68.5,302.5])",
  "lineTo([75.5,302.5])",
  "lineTo([72,307.5])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([68.5,302.5])",
  "lineTo([75.5,302.5])",
  "lineTo([72,307.5])",
  "lineTo([68.5,302.5])",
  "stroke([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,367.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,365,10,10])",
  "strokeRect([115,365,10,10])",
  "fillStyle=#fa0",
  "beginPath([])",
  "moveTo([73,375.5])",
  "lineTo([79,375.5])",
  "lineTo([76,368.5])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([73,375.5])",
  "lineTo([79,375.5])",
  "lineTo([76,368.5])",
  "lineTo([73,375.5])",
  "stroke([])",
  "globalAlpha=0.3",
  "fillStyle=#44f",
  "fillRect([72,427.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,425,10,10])",
  "strokeRect([115,425,10,10])",
  "fillStyle=#fa0",
  "fillRect([95,421.5,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([95.5,422,4,4])",
  "fillStyle=#fa0",
  "fillRect([93,419.5,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([93.5,420,4,4])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,487.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,485,10,10])",
  "strokeRect([115,485,10,10])",
  "fillStyle=#fa0",
  "fillRect([112,482.5,2,3])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([112.5,483,1,2])",
  "fillStyle=#fa0",
  "fillRect([115,480.5,2,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([115.5,481,1,4])",
  "fillStyle=#fa0",
  "fillRect([118,478.5,2,7])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([118.5,479,1,6])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "beginPath([])",
  "moveTo([120,543])",
  "lineTo([127,550])",
  "lineTo([120,557])",
  "lineTo([113,550])",
  "fill([])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "stroke([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,607.5,48,5])",
  "fillRect([72,606.5,2,7])",
  "fillRect([118,606.5,2,7])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,667.5,48,5])",
  "fillRect([72,672.5,3,1])",
  "fillRect([117,672.5,3,1])",
  "globalAlpha=1",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[2,2]])",
  "beginPath([])",
  "moveTo([72,130])",
  "lineTo([120,130])",
  "moveTo([120,250])",
  "lineTo([84,250])",
  "stroke([])",
  "setLineDash([[]])",
  "fillStyle=#fff",
  "fillRect([80.5,246.5,7,7])",
  "strokeStyle=#0b0b0b",
  "lineWidth=1.5",
  "strokeRect([80.5,246.5,7,7])",
  "lineWidth=1",
  "fillStyle=#fff",
  "fillRect([115,125,10,10])",
  "strokeStyle=#0b0b0b",
  "lineWidth=2",
  "strokeRect([115,125,10,10])",
  "lineWidth=1",
  "strokeStyle=#dd1",
  "lineWidth=2",
  "setLineDash([[]])",
  "beginPath([])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "stroke([])",
  "strokeStyle=#f00",
  "lineWidth=1.5",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([113.5,0])",
  "lineTo([113.5,760])",
  "stroke([])",
  "setLineDash([[]])",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A100 Excavate",96,58.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A110 Piling",96,118.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A120 Steel",96,178.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A130 Cladding",96,238.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A140 Fit-out",96,298.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A150 M&E",96,358.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A160 Roof",96,418.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A170 Crane",96,478.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["M1 Handover",120,538.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["LOE Supervision",96,598.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["Substructure",96,658.5])",
  "textAlign=left",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,81.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,141.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,201.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,261.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,321.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,381.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,441.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,501.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["6 Jan",120,561.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,621.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,681.5])",
  "textAlign=left",
  "textAlign=left",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["2d",96,81.5])",
  "fillText(["2d",96,141.5])",
  "fillText(["2d",96,201.5])",
  "fillText(["2d",96,261.5])",
  "fillText(["2d",96,321.5])",
  "fillText(["2d",96,381.5])",
  "fillText(["2d",96,441.5])",
  "fillText(["2d",96,501.5])",
  "fillText(["2d",96,621.5])",
  "fillText(["2d",96,681.5])",
  "textAlign=left",
  "strokeStyle=#0af",
  "lineWidth=2",
  "strokeRect([70,125.5,52,9])",
  "fillStyle=#0af",
  "fillRect([69,127,6,6])",
  "fillRect([117,127,6,6])",
]
`;

exports[`paintScene — whole-scene golden (ADR-0078 S1) > holds its per-method call totals 1`] = `
{
  "beginPath": 19,
  "clearRect": 1,
  "fill": 6,
  "fillRect": 48,
  "fillText": 32,
  "lineTo": 127,
  "moveTo": 103,
  "setLineDash": 11,
  "setTransform": 1,
  "stroke": 14,
  "strokeRect": 25,
}
`;
